# MIDIController

./: .gitignore  .gitmodules  README.md
MidiControlApp/: CMakeLists.txt  MidiControlApp.cpp  MidiControlApp.h
MidiControlApp/Common/: CMakeLists.txt
MidiControlApp/Common/include/: KeyboardOutput.hpp  SendKeys.h  VirtualKeySender.hpp  actions.h  genOutput.hpp  jsonParser.h  midiOutput.hpp  oActions.hpp  textCharSets.hpp
MidiControlApp/Common/src/: KeyboardOutput.cpp  SendKeys.cpp  VirtualKeySender.cpp  jsonParser.cpp  midiOutput.cpp  oActions.cpp
MidiControlApp/MIDI/: CMakeLists.txt
MidiControlApp/MIDI/include/: midithread.hpp
MidiControlApp/MIDI/src/: midithread.cpp
MidiControlApp/boards/: Dj4Mix (2).json  Dj4Mix.json
